<resources>
    <string name="app_name">停停</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <array name="carColor">
        <item>蓝</item>
        <item>黄</item>
        <item>白</item>
        <item>黑</item>
        <item>绿</item>
    </array>
    <string name="des">《停停》又名停车计时器，主要是对车辆进入停车场后进行计时效果，通过车场工作人员设置收费标准后，当车辆离开车库后实现自动算出收费金额。
本软件采用号牌识别技术，车场工作人员只需要将手机的摄像头对准驶入的车辆号牌，就能准确的识别该车辆号牌；同时本软件支持停车详细清
单发送，当车主需要本次清单时，车场工作人员可以在车辆出库时输入车主的手机号码，确定出库后停车详细信息将通过短信方式发送到车主手
机中，该短信由系统下发不产生任何费用。《停停》是一个让你更省心的停车计时器。</string>
    <array name="setradio">
        <item>元/小时</item>
        <item>元/次</item>
        <item>元/天</item>
    </array>

    <string name="login_forget_password">忘记密码?</string>
    <string name="login_regist">新用户注册</string>
    <string name="login_submit">登录</string>
    <string name="regist_phone_text">手机号</string>
    <string name="regist_checkcode_text">验证码</string>
    <string name="regist_placeholder">一</string>
    <string name="regist_password_text">密码</string>
    <string name="regist_password_text_new">新密码</string>
    <string name="regist_password_text_confirm">确认密码</string>
    <string name="regist_read_check_text"> 已阅读同意</string>
    <string name="regist_agreement">《用户服务协议》</string>
    <string name="regist_submit">确认注册</string>
    <string name="regist_submit_reset">重置密码</string>
    <string name="regist_get_code">获取验证码</string>
    <string name="login_phone_hint"><font size="12">请输入手机号</font></string>
    <string name="login_password_hint"><font size="12">请输入密码</font></string>
    <string name="regist_code_hint"><font size="12">请输入短信验证码</font></string>
    <string name="regist_password_hint"><font size="12">请输入6~18位数字或英文字母</font></string>
    <string name="user_agreement_title"><center>停停用户注册协议</center></string>
    <string name="user_agreement_content">\t\t本服务条款是您与停停的所有者成都金盈时代科技有限公司及其关联公司之间就停停提供的信息服务等相关事宜所订立的协议。\n
\t\t请您仔细阅读本条款，您勾选"我已了解并接受《注册协议》"注册成功后入驻停停，本服务条款即构成了对双方具有法律约束力的文件。\n
一、定义\n
\t\t停停。\n
\t\t停停是一个发布贷款消息，帮助你选择贷款综合服务平台，旨在为贷款人和贷款公司提供功能帮助和对接平台。\n
\t\t用户，包含注册用户和非注册用户。注册用户是指通过停停APP完成全部注册程序后，使用停停服务的用户。\n
\t\t信息发布方，是指在停停服务平台上创建、发布帮助信息的平台注册用户。\n
\t\t信息接受方，是指在停停服务平台上浏览、搜索已发布的帮助信息寻求帮助者。\n
二、协议的效力\n
\t\t1、在您按照注册页面提示填写信息、阅读并同意本协议并完成全部注册程序后实际使用停停平台服务时，您即受本协议的约束。在注册时，您应当按照注册要求填写所有资料特别是联系电话、联系地址等联系方式信息，以便停停工作人员与您进行有效联系。如您的资料发生变更，您应及时更新您的资料，以使之真实、及时，完整和准确。如有合理理由怀疑您提供的资料错误、不实、过时或不完整的，停停有权向您发出询问及/或要求改正的通知，并有权直接做出删除相应资料的处理，直至中止、终止对您提供部分或全部服务。由此导致您在使用停停平台服务过程中产生任何损失或增加费用的，应由您完全独自承担。\n
\t\t2、对于您提供的资料及数据信息，您授予停停的、全球通用的、永久的、免费的许可使用权利。您同意，停停(全部或部分地) 使用、复制、更正、发布、翻译、分发、执行和展示您的资料数据(包括但不限于注册资料、行为数据及全部展示于停停)，并以现在已知或日后开发的任何形式、媒体或技术，将上述信息纳入丰富停停平台内。\n
\t\t在此，您特别做出授权，允许依据您提供的信息资料及在停停全平台产品的行为、投诉及侵权状况等进行信用评级，您对停停全平台产品的信用评级体系予以认可并同意停停将您的信息供广大用户进行非商业方式的使用，而无需在该提供行为之前再另行取得您的同意。如您不同意做出前述授权，您应立即停止注册程序或停止使用停停平台服务。如您继续使用停停平台服务的，即表示您同意做出前述授权。\n
\t\t3、您应当在使用停停平台服务之前认真阅读全部协议内容。如您对协议有任何疑问的，应向停停咨询。但无论您事实上是否在使用停停平台服务之前认真阅读了本协议内容，只要您使用停停平台服务，则本协议即对您产生约束，届时您不应以未阅读本协议的内容或者未获得停停对您问询的解答等理由，主张本协议无效，或要求撤销本协议。\n
\t\t4、本协议内容包括协议正文及所有停停已经发布的或将来可能发布的各类规则。所有规则为本协议不可分割的组成部分，与协议正文具有同等法律效力。除另行明确声明外，任何停停及其关联公司提供的服务均受本协议约束。您承诺接受并遵守本协议的约定。如果您不同意本协议的约定，您应立即停止注册程序或停止使用停停平台服务。\n
\t\t5、停停有权根据国家法律法规的更新、产品和服务规则的调整需要不时地制订、修改本协议及/或各类规则，并以网站公示的方式进行公示。如您继续使用停停服务的，即表示您接受经修订的协议和规则。\n
三、注册\n
\t\t1、您确认，在您完成注册程序或以其他停停允许的方式实际使用停停服务时，您应当是具备相应民事行为能力的自然人、法人或其他组织。\n
\t\t2、您注册的账号具有唯一且您应对您的账户和密码的安全，以及对通过您的账户和密码实施的行为负责。除非有法律规定或行政司法机关的指令，且征得停停营运公司的同意，否则，账户和密码不得以任何方式转让、赠与或继承(与账户相关的财产权益除外)。如果发现任何人不当使用您的账户或有任何其他可能危及您的账户安全的情形时，您应当立即以有效方式联系停停工作人员，要求暂停与账号相关的一切服务。您理解停停对您的请求采取行动需要合理时间，停停对在采取行动前已经产生的后果(包括但不限于您的任何损失)不承担任何责任。\n
\t\t3、停停可能会与第三方合作向您提供相关的网络及推广服务，在此情况下，如该第三方同意承担与停停同等的保护您隐私的责任，则停停有权将您的注册资料等提供给该第三方用不当的应用。另外，在不透露单个用户隐私资料的前提下，停停有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。\n
四、停停服务使用规范\n
\t\t1、通过停停平台，您可以按照服务内容发布您自己商铺的信息。但所发布之信息不得含有如下内容：\n
\t\t1)煽动抗拒、破坏宪法和法律、行政法规实施的；\n
\t\t2)煽动颠覆国家政权，推翻社会主义制度的；\n
\t\t3)煽动分裂国家、破坏国家统一的；\n
\t\t4)煽动民族仇恨、民族歧视，破坏民族团结的；\n
\t\t5)捏造或者歪曲事实，散布谣言，扰乱社会秩序的；\n
\t\t6)宣扬封建迷信、淫秽、色情、赌博、暴力、凶杀、恐怖、教唆犯罪的；\n
\t\t7)公然侮辱他人或者捏造事实诽谤他人的，或者进行其他恶意攻击的；\n
\t\t8)损害国家机关信誉的；\n
\t\t9)其他违反宪法和法律法规的；\n
\t\t2、在接受停停服务的过程中，您不得从事下列行为：\n
\t\t1)发表、传送、传播、储存侵害他人知识产权、商业秘密权等合法权利的内容，包含病毒、木马、定时炸弹等可能对停停系统造成伤害或影响其稳定性的内容制造虚假身份以误导、欺骗他人；\n
\t\t2)传送或散布以其他方式实现传送含有受到知识产权法律保护的图像、相片、软件或其他资料的文件，作为举例(但不限于此)：包括版权或商标法(或隐私权或公开权)，除非用户拥有或控制着相应的权利或已得到所有必要的认可；\n
\t\t3)使用任何包含有通过侵犯商标、版权、专利、商业机密或任何一方的其他专有权利的方式利用本“软件”获得的图像或相片的资料或信息；\n
\t\t4)进行危害计算机网络安全的行为，包括但不限于：使用未经许可的数据或进入未经许可的服务器/帐号；未经允许进入公众计算机网络或者他人计算机系统并删除、修改、增加存储信息；未经许可，企图探查、扫描、测试本平台系统或网络的弱点或其它实施破坏网络安全的行为；企图干涉、破坏本平台系统或网站的正常运行，故意传播恶意程序或病毒以及其他破坏干扰正常网络信息服务的行为；伪造TCP/IP数据包名称或部分名称；\n
\t\t5)修改或伪造软件作品运行中的指令、数据、数据包，增加、删减、变动软件 的功能或运行效果，不得将用于上述用途的软件通过信息网络向公众传播或者运营；\n
\t\t6)在未经停停运营公司书面明确授权前提下，出售、出租、出借、散布、转移或转授权软件和服务或相关的链接或从使用软件和服务或软件和服务的条款中获利，无论以上使用是否为直接经济或金钱收益；\n
\t\t7) 违背发布内容的真实性，包括但不限于发布虚假信息、作弊或通过其他手段进行虚假交易。\n
\t\t3、您了解并同意，停停有权应政府部门(包括司法及行政部门)的要求，向其提供您在停停平台填写的注册信息和发布纪录等必要信息。\n
\t\t4、在停停平台上使用停停服务过程中，您承诺遵守以下约定：\n
\t\t1)在使用停停平台服务过程中实施的所有行为均遵守国家法律、法规等规范文件及停停平台各项规则的规定和要求，不违背社会公共利益或公共道德，不损害他人的合法权益，不违反本协议及相关规则。您如果违反前述承诺，产生任何法律后果的，您应以自己的名义独立承担所有的法律责任，并确保停停免于因此产生任何损失。\n
\t\t2)不发布国家禁止发布的信息(除非取得合法且足够的许可)，不发布涉嫌侵犯他人知识产权或其它合法权益的信息，不发布违背社会公共利益或公共道德、公序良俗的信息，不发布其它涉嫌违法或违反本协议及各类规则的信息。\n
\t\t3)不对停停平台上的任何数据作商业性利用，包括但不限于在未经停停运营公司事先书面同意的情况下，以复制、传播等任何方式使用停停平台上展示的信息。\n
\t\t4)不使用任何装置、软件或例行程序干预或试图干预停停平台的正常运作或正在停停平台上进行的任何活动。您不得采取任何将导致不合理的庞大数据负载加诸停停平台网络设备的行动。\n
\t\t5、您了解并同意：\n
\t\t1)您违反上述承诺时，停停有权依据本协议的约定，做出相应处理或终止向您提供服务，且无须征得您的同意或提前通知予您。\n
\t\t2)根据相关法令的指定或者停停服务规则的判断，您的行为涉嫌违反法律法规的规定或违反本协议和/或规则的条款的，停停有权采取相应措施，包括但不限于直接屏蔽、删除侵权信息、降低您的信用值或直接停止提供服务。\n
\t\t3)对于您在停停平台上实施的行为，包括您未在停停平台上实施但已经对停停平台及其用户产生影响的行为，停停有权单方认定您行为的性质及是否构成对本协议和/或规则的违反，并据此采取相应的处理措施。您应自行保存与您行为有关的全部证据，并应对无法提供充要证据而承担的不利后果。\n
\t\t4)对于您涉嫌违反承诺的行为对任意第三方造成损害的，您均应当以自己的名义独立承担所有的法律责任，并应确保停停免于承担因此产生的损失或增加的费用。\n
\t\t5)如您涉嫌违反有关法律或者本协议之规定，使停停遭受任何损失，或受到任何第三方的索赔，或受到任何行政管理部门的处罚，您应当赔偿停停因此造成的损失及(或)发生的费用，包括合理的律师费用。\n
五、责任范围和责任限制\n
\t\t1、停停负责向您提供停停平台服务。但停停对停停平台服务不作任何明示或暗示的保证，包括但不限于停停平台服务的适用性、没有错误或疏漏、持续性、准确性、可靠性、适用于某一特定用途。同时，停停也不对停停平台服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、稳定性、完整性和及时性作出任何承诺和保证。\n
\t\t2、您理解并接受：停停信息服务平台作为信息发布、服务平台、管理服务，无法控制每条信息内容的真实性或准确性。您应自行谨慎判断确定相关信息的真实性、合法性和有效性，并自行承担因此产生的责任与损失。任何信息资料，取决于用户自己并由其承担系统受损或资料丢失的所有风险和责任。\n
\t\t3、您同意在发现本网站任何内容不符合法律规定，或不符合本用户协议规定的，您有义务及时通知停停工作人员。如果您发现您的个人信息被盗用，或者您的版权或者其他权利被侵害，请将此情况告知停停并同时提供如下信息和材料：\n
\t\t1)侵犯您权利的信息的网址，编号或其他可以找到该信息的细节；\n
\t\t2)您是所述的版权或者其他权利的合法拥有者的权利证明；\n
\t\t3)您的联系方式，包括联系人姓名，地址，电话号码和电子邮件；\n
\t\t4)您的身份证复印件、营业执照等其他相关资料。经审查得到证实的，我们将及时删除相关信息。我们仅接受邮寄、电子邮件或传真方式的书面侵权通知。情况紧急的，您可以通过客服电话先行告知，我们会视情况采取相应措施。\n
\t\t4、您了解并同意，停停不对因下述任一情况而导致您的任何损害赔偿承担责任，包括但不限于利润、商誉、使用、数据等方面的损失或其它无形损失的损害赔偿 ：\n
\t\t1) 使用或未能使用停停平台服务。\n
\t\t2) 第三方未经批准的使用您的账户或更改您的数据。\n
\t\t3) 您对停停平台服务的误解。\n
\t\t5) 任何非因停停的原因而引起的与停停平台服务有关的其它损失。\n
\t\t5、停停对下列不可抗力行为免责：信息网络正常的设备维护，信息网络连接故障，电脑、通讯或其他系统的故障，电力故障，罢工，劳动争议，暴乱，起义，骚乱，生产力或生产资料不足，火灾，洪水，风暴，爆炸，战争，政府行为，司法行政机关的命令或第三方的不作为而造成的不能服务或延迟服务。\n
\t\t6、您应当严格遵守本协议及停停发布的其他协议、活动规则，因您违反协议或规则的行为给第三方、或停停造成损失的，您应当承担全部责任。\n
六、协议终止\n
\t\t1、您同意，停停基于平台服务的安全性，有权中止向您提供部分或全部停停平台服务，暂时冻结您的账户，待安全问题解决后及时恢复，并对中止、冻结及恢复的事实及时通知。如果安全问题是由于您的违法行为引起，停停有终止向您提供部分或全部停停平台服务，永久冻结(注销)您的帐户，并有权向您对损失进行索赔。\n
\t\t2、您有权向停停要求注销您的账户，经停停审核同意的，停停注销您的账户，届时，您与停停基于本协议的合同关系即终止。您的账户被注销后，停停没有义务为您保留或向您披露您账户中的任何信息，也没有义务向您或第三方转发任何您未曾阅读或发送过的信息。\n
\t\t3、您同意，您与停停的协议关系终止后，停停仍享有下列权利：\n
\t\t1) 继续保存您未及时删除的注册信息及您使用停停平台服务期间发布的所有信息至法律规定的记录保存期满。\n
\t\t2)您在使用停停平台服务期间存在违法行为或违反本协议和/或规则的行为的，停停仍可依据本协议向您主张权利。\n
\t\t七、隐私权政策\n
\t\t1、停停将在停停平台公布并不时修订隐私权政策，隐私权政策构成本协议的有效组成部分。\n
\t\t2、你知悉并认可：停停可能会与第三方合作向用户提供相关的网络服务，在此情况下，如该第三方同意承担与本网站同等的保护用户隐私的责任，则停停有权将用户的注册资料等提供给该第三方。另外，在不透露单个用户隐私资料的前提下，停停有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。\n
\t\t3、为保护您的个人信息的安全。我们使用各种安全技术和程序来保护您的个人信息不被未经授权的访问、使用或泄漏。对此您表示理解和认同。\n
八、法律适用、管辖与其他\n
\t\t1、本协议之效力、解释、变更、执行与争议解决均适用中华人民共和国法律，如无相关法律规定的，则应参照通用国际商业惯例和(或)行业惯例。\n
\t\t2、因本协议产生之争议，应依照中华人民共和国法律予以处理。
</string>
</resources>
