<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg">
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/padding_top"
        app:contentInsetStart="0dp"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary" >
            <ImageView
                android:id="@+id/title_back_imguser"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/dp_ten"
                android:paddingRight="@dimen/dp_ten"
                android:paddingTop="@dimen/dp_five"
                android:paddingBottom="@dimen/dp_five"
                android:src="@drawable/back1" />
            <TextView
                android:id="@+id/title_titleuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_twenty"
                android:textStyle="normal"
                android:singleLine="true"
                android:text="@string/app_name"
                android:ellipsize="end"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/item_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/bg_white"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">


        <TextView
            android:id="@+id/regist_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@color/bg_white"
            android:text="@string/regist_phone_text" />

        <TextView
            android:id="@+id/regist_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_organge"
            android:ems="5"
            android:gravity="center"
            android:text="@string/regist_get_code"
            android:textColor="@color/bg" />

        <EditText
            android:id="@+id/regist_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/regist_send_code"
            android:layout_toRightOf="@+id/placeholder_phone"
            android:background="@color/bg_white"
            android:hint="@string/login_phone_hint"
            android:maxLength="11"
            android:inputType="phone" />

        <TextView
            android:id="@+id/placeholder_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/regist_phone_text"
            android:background="@color/bg_white"
            android:text="@string/regist_placeholder"
            android:visibility="invisible" />
    </RelativeLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:height="1px"
        android:background="@color/cal_line_grey" />
    <RelativeLayout
        android:id="@+id/item_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/item_phone"
        android:layout_centerVertical="true"
        android:background="@color/bg_white"
        android:padding="15dp">

        <TextView
            android:id="@+id/regist_checkcode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/regist_checkcode_text" />

        <TextView
            android:id="@+id/placeholder_phone_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/regist_checkcode_text"
            android:background="@color/bg_white"
            android:text="@string/regist_placeholder"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/regist_checkcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/placeholder_phone_code"
            android:background="@color/bg_white"
            android:ems="10"
            android:maxLength="6"
            android:hint="@string/regist_code_hint"
            android:inputType="number" />
    </RelativeLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:height="1px"
        android:background="@color/cal_line_grey" />
    <RelativeLayout
        android:id="@+id/item_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_code"
        android:background="@color/bg_white"
        android:padding="15dp">

        <TextView
            android:id="@+id/regist_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/regist_password_text" />

        <TextView
            android:id="@+id/placeholder_phone_pw1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/regist_password_text"
            android:background="@color/bg_white"
            android:text="@string/regist_placeholder"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/placeholder_phone_pw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/placeholder_phone_pw1"
            android:background="@color/bg_white"
            android:text="@string/regist_placeholder"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/regist_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/placeholder_phone_pw2"
            android:background="@color/bg_white"
            android:ems="10"
            android:hint="@string/regist_password_hint"
            android:inputType="textPassword" />
    </RelativeLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:height="1px"
        android:background="@color/cal_line_grey" />

    <RelativeLayout
        android:id="@+id/item_password2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_password"
        android:background="@color/bg_white"
        android:padding="15dp">

        <TextView
            android:id="@+id/regist_password_text_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/regist_password_text_confirm" />

        <EditText
            android:id="@+id/regist_password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/regist_password_text_confirm"
            android:background="@color/bg_white"
            android:ems="10"
            android:hint="@string/regist_password_hint"
            android:inputType="textPassword" />
    </RelativeLayout>






    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_password2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:height="1px"
        android:background="@color/cal_line_grey" />

    <RelativeLayout
        android:id="@+id/item_aggreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_password2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <CheckBox
            android:id="@+id/regist_agreement_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:checked="true"
            android:button="@drawable/bussi_checked_seletor" />

        <TextView
            android:id="@+id/regist_agreement_re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/regist_agreement_check"
            android:layout_alignBottom="@+id/regist_agreement_check"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@+id/regist_agreement_check"
            android:text="@string/regist_read_check_text"
            android:textColor="@color/text_gray" />

        <TextView
            android:id="@+id/regist_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/regist_agreement_re"
            android:layout_alignBottom="@+id/regist_agreement_re"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/regist_agreement_re"
            android:text="@string/regist_agreement"
            android:textColor="@color/blue" />
    </RelativeLayout>

    <Button
        android:id="@+id/regist_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_blue_seletor"
        android:text="@string/regist_submit"
        android:textColor="@color/bg" />
</LinearLayout>
