<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg">
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/padding_top"
        app:contentInsetStart="0dp"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary" >
            <ImageView
                android:id="@+id/title_back_img"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/dp_ten"
                android:paddingRight="@dimen/dp_ten"
                android:paddingTop="@dimen/dp_five"
                android:paddingBottom="@dimen/dp_five"
                android:src="@drawable/back1" />
            <TextView
                android:id="@+id/title_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_twenty"
                android:textStyle="normal"
                android:singleLine="true"
                android:text="@string/app_name"
                android:ellipsize="end"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_agreement_title"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="18dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_firteen"
                android:layout_marginLeft="@dimen/dp_five"
                android:layout_marginRight="@dimen/dp_five"
                android:background="@color/bg_white"
                android:textColor="@color/black"
                android:text="@string/user_agreement_content"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
